--- a/Exercicios/ex022/fundo06.html
+++ b/Exercicios/ex022/fundo06.html
@@ -8,6 +8,7 @@
     <style>
         body {
             background-color: black;
+            height: 100vh;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center top;
             background-repeat: no-repeat;
