--- a/Exercicios/ex024/paginas-extras/pagina01.html
+++ b/Exercicios/ex024/paginas-extras/pagina01.html
@@ -33,10 +33,9 @@
     </style>
 </head>
 <body>
-    <h1>Isso é  um teste</h1>
     <div>
         <table>
-            <caption>Tabela responsiva</caption>
+            <caption>Vendas por mês</caption>
             <thead>
                 <tr>
                     <th>Produto</th>
