--- a/Exercicios/ex025/form02.html
+++ b/Exercicios/ex025/form02.html
@@ -15,7 +15,7 @@
         </p>
         <p>
             <label for="isenha">Senha: </label>
-            <input type="password" name="senha" id="isenha" required minlength="5" maxlength="15" placeholder="Digite sua senha">
+            <input type="password" name="senha" id="isenha" required minlength="5" maxlength="15" placeholder="Digite sua senha" autocomplete="current-password">
         </p>
         <p>
             <input type="submit" value="Enviar">
