--- a/Exercicios/ex026/mq05/index.html
+++ b/Exercicios/ex026/mq05/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu Hambúrguer</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
         <h1>Meu site</h1>
-        <menu>
+        <span id="menu" class="material-icons" onclick="clickmenu()">menu</span>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -28,6 +30,16 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, odit repellat! Qui dolore alias totam voluptates sit, ea, consequatur ipsum veniam quia quo autem. Deleniti molestiae voluptas earum aliquam id! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit eveniet reiciendis cupiditate accusamus distinctio, velit dolores nisi quaerat ea. Ut quo quaerat quam! Vero consequuntur accusamus, aliquid ducimus rem ab?</p>
         </article>
     </main>
+
+    <script>
+        function clickmenu () {
+            if (itens.style.display == 'block') {
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
+            }
+        }
+    </script>
 </body>
 </html>
 
