--- a/Exercicios/ex026/mq05/index.html
+++ b/Exercicios/ex026/mq05/index.html
@@ -7,14 +7,15 @@
     <title>Menu Hambúrguer</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
-<body>
+<body onresize="mudoutamanho">
     <header>
         <h1>Meu site</h1>
         <span id="menu" class="material-icons" onclick="clickmenu()">menu</span>
         <menu id="itens">
             <ul>
-                <li><a href="#">Opção 1</a></li>
+                <li><a href="#">Opção 1</a></li> 
                 <li><a href="#">Opção 2</a></li>
                 <li><a href="#">Opção 3</a></li>
                 <li><a href="#">Opção 4</a></li>
@@ -32,7 +33,17 @@
     </main>
 
     <script>
-        function clickmenu () {
+
+        function mudoutamanho() {
+            if (window.innerWidth >= 769) {
+                itens.style.display = 'block'
+            } else {
+                itens.style.display = 'none'
+            }
+        }
+
+
+        function clickmenu() {
             if (itens.style.display == 'block') {
                 itens.style.display = 'none'
             } else {
